[Feature] Import and Export of json files working; [UIX] minor tweaks and changes; [Fix] overlapping of some UI elements fixed

--- a/scvis/newColorSelector/css/ColorSelector.css
+++ b/scvis/newColorSelector/css/ColorSelector.css
@@ -1,7 +1,6 @@
 .colorselector {
     position: absolute;
     width: 75%;
-    height: 200px;
 }
 
 .colorselector-head {
